Accessibility tree says role=table even though role="grid" is explicitly set (WPT wai-aria/role/grid-roles.html role is grid)
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox125 | --- | fixed |
People
(Reporter: carolynmacleod4, Assigned: nlapre)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:80.0) Gecko/20100101 Firefox/80.0
Steps to reproduce:
- Go to https://codepen.io/carmacleod/full/gOPNZOE
- Inspect the Accessibility tree for the table
- This table has an explicit role of "grid" but the Accessibility tree says it's a table
Actual results:
Accessibility tree misidentifies this grid as a table
Expected results:
Accessibility tree should says it's a grid
| Reporter | ||
Comment 1•5 years ago
|
||
This may be due to: https://bugzilla.mozilla.org/show_bug.cgi?id=1177270
Just want to make sure this issue will be fixed when table and grid are split.
Comment 2•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Comment 3•5 years ago
|
||
The roles exposed in the accessibility tree are Firefox roles, not ARIA roles. For example, there are roles for which there is no equivalent in ARIA; e.g. text and text leaf. Internally (and in most platform APIs), there's not really any difference between table and grid, so Firefox doesn't differentiate. That said, I understand this is confusing for web devs.
The question is whether we should use a different role internally or tweak Dev Tools to fake this.
Marco, what do you think?
Comment 4•5 years ago
|
||
I know for a fact that JAWS differenciates between tables and grids. For example, the Gmail message list is a grid, as is the new Facebook design's Notifications overlay. So Vispero are already applying some heuristics to differentiate the two. I think to avoid confusion, and make this explicit, we should go with a different internal role. We already have so many of them, one more doesn't really matter, and removes ambiguity.
Updated•5 years ago
|
Updated•5 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
| Assignee | ||
Comment 6•2 years ago
|
||
This revision adds a Gecko GRID role, matching the ARIA 'grid' role, and
implements its platform mappings. It then remaps the ARIA 'grid' role to the
Gecko GRID role. Finally, this revision removes the expected-fail for the
relevant formerly-failing web platform test and updates existing tests.
Updated•2 years ago
|
Comment 8•2 years ago
|
||
| bugherder | ||
Description
•