Bug 1656330: Implement grid role, mapping, r=Jamie,devtools-reviewers,nchevobbe

This revision adds a Gecko GRID role, matching the ARIA 'grid' role, and
implements its platform mappings. It then remaps the ARIA 'grid' role to the
Gecko GRID role. Finally, this revision removes the expected-fail for the
relevant formerly-failing web platform test and updates existing tests.

Differential Revision: https://phabricator.services.mozilla.com/D202040